[ENG-4481] Initial glue wrapper via spark UDF, java8 compatibility changes (#20)