@@ -2,6 +2,8 @@ package com.onehouse.api;
 
 import com.google.common.annotations.VisibleForTesting;
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 import java.util.concurrent.CompletableFuture;
@@ -28,7 +30,8 @@ public class AsyncHttpClientWithRetry {
   // using mapping from:
   // https://chromium.googlesource.com/external/github.com/grpc/grpc/+/refs/tags/v1.21.4-pre1/doc/statuscodes.md
   private static final List<Integer> ACCEPTABLE_HTTP_FAILURE_STATUS_CODES =
-      List.of(404, 400, 403, 401, 409);
+      new ArrayList<>(Arrays.asList(404, 400, 403, 401, 409));
+
   private static final Random random = new Random();
 
   public AsyncHttpClientWithRetry(
