@@ -6,6 +6,7 @@ import com.onehouse.config.models.common.FileSystemConfiguration;
 import com.onehouse.config.models.common.S3Config;
 import java.util.concurrent.ExecutorService;
 import javax.annotation.Nonnull;
+import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import software.amazon.awssdk.auth.credentials.AwsBasicCredentials;
@@ -62,7 +63,7 @@ public class S3AsyncClientProvider {
       throw new IllegalArgumentException("S3 Config not found");
     }
 
-    if (s3Config.getRegion().isBlank()) {
+    if (StringUtils.isBlank(s3Config.getRegion())) {
       throw new IllegalArgumentException("Aws region cannot be empty");
     }
   }
